<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/habit_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/habit_title"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/habit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="habit title..."
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/habit_reason_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/habit_reason"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/habit_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="habit reason..."
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/public_private_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center|center_horizontal"
                android:text="Habit Accessibility" />

            <Button
                android:id="@+id/public_private_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="public/private button" />

            <TextView
                android:id="@+id/days_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="Days Of The Week"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/monday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:text="M" />

                <Button
                    android:id="@+id/tuesday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="T" />

                <Button
                    android:id="@+id/wednesday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="W" />

                <Button
                    android:id="@+id/thursday_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:text="R" />

                <Button
                    android:id="@+id/friday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="F" />

                <Button
                    android:id="@+id/saturday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="S" />

                <Button
                    android:id="@+id/sunday_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:text="U" />

            </LinearLayout>

            <TextView
                android:id="@+id/date_start_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="Date To Start"
                android:layout_marginTop="20dp" />

            <CalendarView
                android:id="@+id/date_to_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>