<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/profile_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:drawableLeft="@drawable/ic_profile_icon"
        android:text="Profile"
        android:padding="10dp" />

    <Button
        android:id="@+id/all_habit_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".34"
        android:drawableLeft="@drawable/ic_all_habit"
        android:text="All habits"
        android:padding="10dp" />

    <Button
        android:id="@+id/daily_habit_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:drawableLeft="@drawable/ic_daily_habit"
        android:text="Today"
        android:padding="10dp" />
</LinearLayout>

